--- a/fronted/src/app/components/modal/styles.module.css
+++ b/fronted/src/app/components/modal/styles.module.css
@@ -3,12 +3,12 @@
 }
 
 .show {
-  opacity: 1;
+  display: unset;
   transition: opacity 0.3s ease-in;
 }
 
 .hidden {
-  opacity: 0;
+  display: none;
   transition: opacity 0.3s ease-in;
 }
 
