--- a/fronted/src/components/avatar/styles.module.css
+++ b/fronted/src/components/avatar/styles.module.css
@@ -3,7 +3,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  background-color: var(--secondary-color);
+  background-color: var(--primary-color);
 }
 
 .small {
