--- a/fronted/src/components/loading/styles.module.css
+++ b/fronted/src/components/loading/styles.module.css
@@ -24,7 +24,7 @@
   animation: load7 1.8s infinite ease-in-out;
 }
 .loader {
-  color: var(--secondary-color);
+  color: var(--primary-color);
   font-size: 10px;
   margin: 80px auto;
   position: relative;
