--- a/fronted/src/components/project/label/create/styles.module.css
+++ b/fronted/src/components/project/label/create/styles.module.css
@@ -1,6 +1,6 @@
 .container {
   box-sizing: border-box;
-  width: 300px;
+  width: 250px;
   padding: 10px 20px;
   display: flex;
   flex-direction: column;
@@ -20,7 +20,7 @@
 
 .colors > button {
   width: 100%;
-  height: 20px;
+  height: 25px;
   border-radius: 8px;
   border: 0;
   padding: 0 8px;
@@ -80,6 +80,6 @@
 }
 
 .button[disabled] {
-  background-color: var(--secondary-color);
-  cursor: not-allowed;
+  background-color: var(--window-background-color);
+  color: var(--text-primary-color);
 }
