Apply default value for project.list

--- a/fronted/src/app/globals.css
+++ b/fronted/src/app/globals.css
@@ -4,7 +4,7 @@
   --primary-color: #1565c0;
   --secondary-color: #80d8ff;
 
-  --disabled-color: #b0bec5
+  --disabled-color: #b0bec5;
 
   --text-primary-color: #212121;
   --text-secondary-color: #bdbdbd;
