--- a/fronted/src/components/board/styles.module.css
+++ b/fronted/src/components/board/styles.module.css
@@ -2,8 +2,8 @@
   box-sizing: border-box;
   display: flex;
   flex-direction: column;
-  align-items: start;
-  justify-content: start;
+  align-items: flex-start;
+  justify-content: flex-start;
   flex-wrap: nowrap;
   overflow-x: auto;
   overflow-y: hidden;
@@ -13,8 +13,8 @@
 .column_container {
   box-sizing: border-box;
   display: flex;
-  align-items: start;
-  justify-content: start;
+  align-items: flex-start;
+  justify-content: flex-start;
   flex-wrap: nowrap;
   overflow-x: auto;
   overflow-y: hidden;
