--- a/fronted/src/components/board/column/view/styles.module.css
+++ b/fronted/src/components/board/column/view/styles.module.css
@@ -1,7 +1,7 @@
 .container {
   box-sizing: border-box;
-  /* min-width: 270px; */
-  max-height: 95vh;
+  width: 100%;
+  min-width: 210px;
   border-radius: 10px;
   padding: 5px 10px;
   background-color: var(--window-background-color);
@@ -19,6 +19,7 @@
 .header > span {
   font-weight: 600;
   color: var(--text-color);
+  font-size: var(--text-medium);
 }
 
 .icon {
