--- a/fronted/src/components/board/list/styles.module.css
+++ b/fronted/src/components/board/list/styles.module.css
@@ -1,5 +1,6 @@
 .container {
   box-sizing: border-box;
+  width: 100%;
   display: flex;
   flex-direction: column;
   align-items: flex-start;
@@ -7,11 +8,12 @@
   flex-wrap: nowrap;
   overflow-x: auto;
   overflow-y: hidden;
-  padding: 20px 20px;
+  padding: 5px 20px;
 }
 
 .column_container {
   box-sizing: border-box;
+  width: 100%;
   display: flex;
   align-items: flex-start;
   justify-content: flex-start;
