--- a/fronted/src/components/board/column/view/styles.module.css
+++ b/fronted/src/components/board/column/view/styles.module.css
@@ -1,25 +1,35 @@
 .container {
   box-sizing: border-box;
-  width: 100%;
-  min-width: 210px;
+  width: 270px;
+  min-width: 260px;
   border-radius: 10px;
-  padding: 5px 10px;
-  background-color: var(--window-background-color);
-  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.25);
+  padding: 8px 8px;
   flex-direction: column;
   justify-content: center;
   align-items: flex-start;
 }
 
-.header {
+.header, .name_container {
   display: flex;
   justify-content: space-between;
 }
 
-.header > span {
+.name_container > span {
   font-weight: 600;
   color: var(--text-color);
   font-size: var(--text-medium);
+}
+
+.name_container > div {
+  margin-right: 5px;
+  padding: 0px 5px;
+  border-radius: 8px;
+  font-weight: 600;
+  background-color: var(--disabled-color);
+  font-size: var(--text-small);
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .icon {
@@ -32,7 +42,7 @@
 
 .content {
   box-sizing: border-box;
-  padding: 10px 10px;
+  padding: 0;
   width: 100%;
   min-height: 20px;
   margin: 5px 0px;
