--- a/fronted/src/components/card/item/styles.module.css
+++ b/fronted/src/components/card/item/styles.module.css
@@ -33,7 +33,7 @@
 }
 
 .header > span {
-  font-size: var(--text-medium);
+  font-size: var(--text-small);
   color: var(--text-primary-color);
   font-weight: 500;
   border-radius: 4px;
