--- a/fronted/src/components/board/list/styles.module.css
+++ b/fronted/src/components/board/list/styles.module.css
@@ -16,11 +16,11 @@
   width: 100%;
   display: flex;
   align-items: flex-start;
-  justify-content: flex-start;
+  justify-content:space-between;
   flex-wrap: nowrap;
   overflow-x: auto;
   overflow-y: hidden;
-  gap: 20px;
+  gap: 10px;
   padding: 15px 10px;
 }
 
