Fix Card item width

--- a/fronted/src/components/board/column/view/styles.module.css
+++ b/fronted/src/components/board/column/view/styles.module.css
@@ -1,7 +1,7 @@
 .container {
   box-sizing: border-box;
-  /* width: 270px; */
-  min-width: 260px;
+  width: 100%;
+  min-width: 270px;
   border-radius: 10px;
   padding: 8px 8px;
   flex-direction: column;
