--- a/fronted/src/components/card/detail/styles.module.css
+++ b/fronted/src/components/card/detail/styles.module.css
@@ -142,3 +142,20 @@
   align-items: center;
   border-radius: 4px;
 }
+
+.detail_action_list {
+  box-sizing: border-box;
+  width: 320px;
+  box-sizing: border-box;
+  position: absolute;
+  top: 0;
+  left: calc(50% - 160px);
+  background-color: var(--white-color);
+  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.25);
+  padding: 5px 0;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  border-radius: 4px;
+}
