--- a/fronted/src/components/card/status/styles.module.css
+++ b/fronted/src/components/card/status/styles.module.css
@@ -31,7 +31,7 @@
 
 .list_content_container {
   display: flex;
-  justify-content: space-between;
+  justify-content: center;
   align-items: flex-start;
   flex-wrap: wrap;
   gap: 10px;
