--- a/fronted/src/app/editor/styles.module.css
+++ b/fronted/src/app/editor/styles.module.css
@@ -45,7 +45,7 @@
   gap: 10px;
   overflow: auto;
   /* border: 1px solid var(--text-tertiary-color); */
-  font-family: 'Inconsolata', monospace;
+  /* font-family: 'Inconsolata', monospace; */
   font-size: var(--text-medium);
 }
 
