--- a/fronted/src/components/board/create/styles.module.css
+++ b/fronted/src/components/board/create/styles.module.css
@@ -6,7 +6,7 @@
   gap: 10px;
   width: 100%;
   height: 100%;
-  font-family: "Inconsolata", monospace;
+  /* font-family: "Inconsolata", monospace; */
 }
 
 .input_container {
