--- a/fronted/src/components/card/item/styles.module.css
+++ b/fronted/src/components/card/item/styles.module.css
@@ -28,7 +28,7 @@
   font-weight: 500;
   border-radius: 4px;
   padding: 0 5px;
-  font-family: "Inconsolata", monospace;
+  /* font-family: "Inconsolata", monospace; */
 }
 
 .content {
