--- a/fronted/src/components/card/label/styles.module.css
+++ b/fronted/src/components/card/label/styles.module.css
@@ -45,7 +45,7 @@
   box-sizing: border-box;
   border: 0 !important;
   border-radius: 4px;
-  font-family: "Inconsolata", monospace;
+  /* font-family: "Inconsolata", monospace; */
   color: var(--text-primary-color);
   text-align: center;
 }
@@ -92,7 +92,7 @@
 .labels_container > span {
   padding: 2px 10px;
   border-radius: 8px;
-  font-family: "Inconsolata", monospace;
+  /* font-family: "Inconsolata", monospace; */
   font-size: var(--text-small);
   color: var(--text-primary-color);
   cursor: pointer;
