--- a/fronted/src/components/card/list/styles.module.css
+++ b/fronted/src/components/card/list/styles.module.css
@@ -1,9 +1,12 @@
 .container {
   box-sizing: border-box;
   width: 100%;
+  max-height: 85vh;
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
   align-items: center;
   gap: 10px;
+  overflow: auto;
+  padding: 5px 10px;
 }
