--- a/fronted/src/app/globals.css
+++ b/fronted/src/app/globals.css
@@ -12,6 +12,7 @@
   --secondary-color: #80d8ff;
 
   --disabled-color: #b0bec5;
+  --droppable-color: #eef2f4;
 
   --text-primary-color: #212121;
   --text-secondary-color: #616161;
