--- a/fronted/src/components/card/list/styles.module.css
+++ b/fronted/src/components/card/list/styles.module.css
@@ -1,7 +1,8 @@
 .container {
   box-sizing: border-box;
   width: 100%;
-  max-height: 85vh;
+  /* max-height: 85vh; */
+  height: 85vh;
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
@@ -9,4 +10,10 @@
   gap: 10px;
   overflow: auto;
   padding: 5px 10px;
+  border-radius: 4px;
+}
+
+.drop_over {
+  background-color: var(--droppable-color);
+  transition: background-color 0.3s ease-in-out;
 }
