Add Card Drag and Drop functionality

--- a/fronted/src/components/card/detail/styles.module.css
+++ b/fronted/src/components/card/detail/styles.module.css
@@ -42,7 +42,11 @@
 
 .detail_content > .detail_description {
   margin: 0 0 20px;
-  /* font-family: "Inconsolata", monospace; */
+  cursor: text;
+}
+
+.detail_description > i {
+  color: var(--text-tertiary-color);
 }
 
 .detail_status {
@@ -111,7 +115,6 @@
 }
 
 .detail_labels > div > span {
-  /* font-family: "Inconsolata", monospace; */
   font-size: var(--text-medium);
 }
 
